feat: initialize report endpoint
